# backend/app/Http/Controllers/FoundationController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Helper\ResponseHelper;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Http;
 
 class FoundationController extends Controller
@@ -31,7 +32,8 @@ class FoundationController extends Controller
      *                     @OA\Property(property="latitude", type="string", example="-7.12345"),
      *                     @OA\Property(property="longitude", type="string", example="110.12345"),
      *                     @OA\Property(property="address", type="string", example="Jl. Merdeka No. 1, Jakarta"),
-     *                     @OA\Property(property="phone", type="string", example="+6281234567890")
+     *                     @OA\Property(property="phone", type="string", example="+6281234567890"),
+     *                     @OA\Property(property="distance", type="decimal", example="1.2")
      *                 )
      *             )
      *         )
@@ -52,6 +54,38 @@ class FoundationController extends Controller
     {
         $foundations = Http::withHeader('API-KEY', env('API_KEY'))->get(env('BBJ_ENDPOINT') . 'foundations');
         $data = json_decode($foundations->body())->data;
+        $data = collect($data)->map(function ($item) {
+            unset($item->created_at);
+            unset($item->updated_at);
+            $item->distance = $this->distance($item->latitude, $item->longitude, Auth::user()->latitude, Auth::user()->longitude);
+            return $item;
+        })->sortBy('distance')->values();
         return ResponseHelper::send('Success retrieve all foundation data', $data, 200);
+    }
+    protected function distance($lat1, $lon1, $lat2, $lon2, $unit = 'K')
+    {
+        // Radius of the earth in different units
+        $earthRadius = [
+            'K' => 6371,       // Kilometers
+            'M' => 3958.8,     // Miles
+            'N' => 3440.1      // Nautical Miles
+        ];
+
+        // Convert degrees to radians
+        $lat1 = deg2rad($lat1);
+        $lon1 = deg2rad($lon1);
+        $lat2 = deg2rad($lat2);
+        $lon2 = deg2rad($lon2);
+
+        // Haversine formula
+        $deltaLat = $lat2 - $lat1;
+        $deltaLon = $lon2 - $lon1;
+
+        $a = sin($deltaLat / 2) ** 2 +
+            cos($lat1) * cos($lat2) * sin($deltaLon / 2) ** 2;
+        $c = 2 * atan2(sqrt($a), sqrt(1 - $a));
+        $distance = $earthRadius[$unit] * $c;
+
+        return round($distance, 1);
     }
 }
